# ATIVIDADE-08

./: .gitignore  ATIVIDADE-08.c  CMakeLists.txt  README.md
libs/include/: CMakeLists.txt  connection_mqtt.h  definicoes.h  queue_sensores.h  task_co2.h  task_connection.h  task_display.h  task_fumaca.h  task_inflamaveis.h  task_toxicos.h
libs/src/: connection_mqtt.c  task_co2.c  task_connection.c  task_display.c  task_fumaca.c  task_inflamaveis.c  task_toxicos.c
